# MichealStipe

./: .ccls  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  launch.json
cmake/: pvt_is.cmake  tools.cmake  warnings.cmake
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  pch.hpp
